# Tradingstation

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLEAR_BUILD_CACHE_INSTRUCTIONS.md  COMPACT_FETCH_FIX_REPORT.md  COMPREHENSIVE_COMPACT_FETCH_FIX_REPORT.md  COMPREHENSIVE_DATA_FETCHER_SUMMARY.md  CONTRIBUTING.md  DATA_ENGINE_OVERHAUL_SUMMARY.md  DATA_FETCHING_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION_GUIDE.md  DIAGNOSTIC_USAGE.md  DIGITALOCEAN_DEPLOYMENT_CONFIG.md  DISCOVERY_REPORT.md  Dashboard.ipynb  EMERGENCY_FIXES.md  ENVIRONMENT_SETUP.md  HEALTH_CHECK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTRADAY_LOGGING_GUIDE.md  LICENSE  NEW_SYSTEM_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_CONFIRMATION.md  README.md  REPO_VARIABLES_UPDATE.md  SECURITY.md  SILENT_FAILURE_RESOLUTION_SUMMARY.md  SMOKE_TEST.md  SPACES_INTEGRATION.md  STRATEGIC_REBUILD_SUMMARY.md  SYSTEM_OPTIMIZATION_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  TICKER_MANAGEMENT.md  Trading_Station.ipynb  app.py  (+84 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  deploy-checks.yaml  discovery.yml  fetch-once.yml  inspect-spaces.yml  redeploy-do-app.yml  repair-paths.yml  seed-universe.yml  validate-env.yml
.streamlit/: config.toml
config/: .env.example  logging.yml  schedules.yml  symbols_universe.yaml
core/: base_screener.py  config_manager.py  data_fetcher.py  data_manager.py  di_container.py  health_monitor.py  interfaces.py  logging_system.py  metrics.py  plugins.py
dashboard/: __init__.py  master_dashboard.py  scoring.py  screener_analysis_dashboard.html  streamlit_app.py  trade_plans.py  trading_dashboard.html
dashboard/Pages/: 6_⏱️_Scheduler_Monitor.py  Performance_Dashboard.py  _Master_Screener_Hub.py  _Scheduler_Monitor.py  _Strategy_Tabs.py  _System_Settings.py  _Trade_Journal.py
dashboard/pages/: 1_📈_Master_Screener_Hub.py  2_🎯_Strategy_Tabs.py  3_📋_Trade_Journal.py  4_📊_Performance_Dashboard.py  5_🔧_System_Settings.py  6_⏱️_Scheduler_Monitor.py  Pages1_📈_Master_Screener_Hub.py
data/: avwap_anchors.csv
data/daily/: AAPL_daily.csv  AMD_daily.csv  AMZN_daily.csv  GOOGL_daily.csv  MSFT_daily.csv  NFLX_daily.csv  NVDA_daily.csv  TSLA_daily.csv  sample_daily.csv
data/intraday/: AAPL_1min.csv  AAPL_daily.csv  AMD_1min.csv  AMD_daily.csv  AMZN_1min.csv  AMZN_daily.csv  GOOGL_1min.csv  GOOGL_daily.csv  MSFT_1min.csv  MSFT_daily.csv  NFLX_1min.csv  NFLX_daily.csv  NVDA_1min.csv  NVDA_daily.csv  TEST_1min.csv  TSLA_1min.csv  TSLA_daily.csv  master_tickerlist_1min.csv  sample_1min.csv
data/intraday_30min/: AAPL_30min.csv  AMD_30min.csv  AMZN_30min.csv  GOOGL_30min.csv  MSFT_30min.csv  NFLX_30min.csv  NVDA_30min.csv  TSLA_30min.csv  (+1 more)
docs/: DEPLOYMENT_VERIFICATION_GUIDE.md  ENV.md  README.md  RUNBOOK.md  SCHEMAS.md  SILENT_FAILURE_RESOLUTION_SUMMARY.md  STRATEGY_GUIDE.md  api-optimization.md  security.md
jobs/: __init__.py  backfill_rebuilder.py  compact_update.py  data_fetch_manager.py  data_health_check.py  find_avwap_anchors.py  force_update_tickers.py  full_fetch.py  intraday_fetcher.py  master_compact_fetcher.py  nightly_historical_rebuild.py  realtime_intraday_updater.py  run_weekly_universe_scan.py  update_all_data.py  update_daily.py  update_intraday.py  update_intraday_30min.py  update_intraday_compact.py  validate_data_integrity.py
orchestrator/: __init__.py  healthchecks.py  job_registry.py  modes.py  run_all.py  scheduler.py  schedules.py
screeners/: __init__.py  avwap.py  avwap_reclaim.py  breakout.py  ema_pullback.py  exhaustion.py  exhaustion_reversal.py  gapgo.py  modern_gapgo.py  orb.py
tests/: __init__.py  comprehensive_integration_test.py  conftest.py  test_data_processing.py  test_mode_validation.py
ticker_selectors/: opportunity_ticker_finder.py
tools/: __init__.py  discovery.py  health_check.py  inspect_spaces.py  repair_paths.py  seed_universe.py  smoke_test_e2e.py  verify_deployment.py
utils/: __init__.py  alpha_vantage_api.py  async_client.py  cache.py  config.py  data_fetcher.py  data_storage.py  env_validation.py  helpers.py  logfmt.py  logging_setup.py  market_time.py  markets.py  paths.py  pipeline.py  rate_limit.py  sp500_loader.py  spaces_io.py  spaces_manager.py  storage.py  ticker_management.py  ticker_manager.py  time_utils.py  timestamp_standardizer.py  universe.py  validation.py  validators.py
(+33 files in other folders)
