[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingstation"
version = "1.0.0"
description = "Modular Python Trading System"
authors = [{name = "Trading Team", email = "trading@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "requests", 
    "pytz",
    "boto3",
    "schedule",
    "tqdm",
    "streamlit",
    "s3fs",
    "alpha_vantage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests that may take time",
    "api: Tests that require API calls",
    "asyncio: Async tests",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["utils", "screeners", "orchestrator", "dashboard", "jobs"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alpha_vantage.*",
    "streamlit.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]